--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf build/ && tsc",
     "start": "node src/server",
-    "nodemon": "nodemon src/server"
+    "nodemon": "nodemon src/server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.10.2",
+    "mongoose": "^7.5.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "typescript": "5.2.2"
   }
 }
