--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lowdb": "^1.0.12",
     "express": "^4.18.2",
     "joi": "^17.10.2",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.5.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
     "nodemon": "^3.0.1",
-    "typescript": "5.2.2"
+    "typescript": "^5.2.2"
   }
 }
