--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.ts",
+  "main": "src/server.ts",
   "scripts": {
     "build": "rm -rf build/ && tsc",
-    "start": "node src/server",
+    "start": "ts-node src/server",
     "nodemon": "nodemon src/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "joi": "^17.10.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.5.3"
+    "mongoose": "^7.5.3",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
