--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/lowdb": "^1.0.12",
     "express": "^4.18.2",
     "joi": "^17.10.2",
+    "sequelize": "^6.33.0",
     "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1"
