--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "homepage": "https://github.com/matt-pessoa/test-junior-fullstack#readme",
   "devDependencies": {
     "concurrently": "^8.2.1"
+  },
+  "dependencies": {
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.0",
+    "@types/react": "^18.2.23",
+    "@types/react-dom": "^18.2.8",
+    "typescript": "^5.2.2"
   }
 }
