--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/lowdb": "^1.0.12",
     "express": "^4.18.2",
     "joi": "^17.10.2",
+    "multer": "^1.4.5-lts.1",
     "sequelize": "^6.33.0",
     "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
+    "@types/multer": "^1.4.8",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   }
