--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/lowdb": "^1.0.12",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.10.2",
     "multer": "^1.4.5-lts.1",
@@ -23,6 +24,7 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/multer": "^1.4.8",
     "nodemon": "^3.0.1",
