--- a/server/package.json
+++ b/server/package.json
@@ -24,10 +24,16 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.6",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/multer": "^1.4.8",
+    "@types/sinon": "^10.0.17",
+    "@types/sinon-chai": "^3.2.10",
+    "chai": "^4.3.10",
     "nodemon": "^3.0.1",
+    "sinon": "^16.0.0",
+    "sinon-chai": "^3.7.0",
     "typescript": "^5.2.2"
   }
 }
