--- a/server/package.json
+++ b/server/package.json
@@ -6,17 +6,14 @@
   "scripts": {
     "build": "rm -rf build/ && tsc",
     "start": "ts-node src/server",
-    "nodemon": "nodemon src/server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "nodemon": "nodemon src/server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/lowdb": "^1.0.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "joi": "^17.10.2",
     "multer": "^1.4.5-lts.1",
     "sequelize": "^6.33.0",
     "sqlite": "^5.0.1",
@@ -27,10 +24,14 @@
     "@types/chai": "^4.3.6",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/jest": "^29.5.5",
     "@types/multer": "^1.4.8",
+    "@types/node": "^20.8.0",
     "@types/sinon": "^10.0.17",
     "@types/sinon-chai": "^3.2.10",
     "chai": "^4.3.10",
+    "jest": "^29.7.0",
+    "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "sinon": "^16.0.0",
     "sinon-chai": "^3.7.0",
